# 5400_Final_Project

./: .gitattributes  .gitignore  README.html  README.md  Vance_Speech_1  Vance_Speech_2  congress_api.ipynb  data_processing.ipynb  linguistic_features.ipynb  pyproject.toml  sentiment_analysis.ipynb
analysis/: linguistic_features.ipynb
analysis/config/: party_map.json
data/config/: collected_speeches.json  floor_speeches_congress_api.json  rally_speeches_audio_transcribed.json  rally_speeches_youtube.json  speech_urls.json
data/desantis_ron/: 1_conservative_political_action_conference_2022.txt  1_press_conference_2023.txt  1_republican_national_conv_2024.txt  1_stop_woke_act_2021.txt  1_victory_speech.txt  2_state_of_state_address.txt  2_state_of_state_address_2024.txt  2_state_of_state_address_2025.txt  3_inaugural_address.txt  3_nbc_interview.txt  3_nbc_interview_israel.txt  3_newsom_debate.txt
data/sentiment_scores/: eda_dataset.csv  output1.csv  output2.csv  output3.csv  output4.csv  output5.csv  output_sentiment_clean.csv
data_collection/: __init__.py  config.py  downloader.py
preprocessing/: cleaner.py  config.py
scripts/data_collection/: bernie_sander_speeches.py  floor_speech_collector.py  main.py  rally_speech_collector_audio_transcribe.py  (+2 more)
utils/: helpers.py
vance_jd/: 1_military_parade.txt  1_rnc_night_3.txt  1_rnc_victory_speech_2024.txt  2_vance_on_ukraine_aid_bill_2024  3_american_dynamism_summit  3_la_federal_operations_center_immigration_raids  3_paris_ai_summit.txt  3_press_budget_negotiations.txt  3_teneo_network_conference.txt
(+3623 files in other folders)
