[project]
name = "political-speech-analysis"
version = "0.1.0"
description = "Chameleon Effect in Political Rhetoric - NLP Analysis"
authors = [
    {name = "DSAN 5400 - Comp Linguistics - SV, EB, VT, MY, NP"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.14.3,<5.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "stanza>=1.5.0,<2.0.0",
    "nltk>=3.8.0,<4.0.0",
    "transformers>=4.30.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
    "tqdm>=4.65.0,<5.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10.0.0",
    "jupyter>=1.0.0,<2.0.0",
]

[tool.poetry]
packages = [
    {include = "data_collection", from = "packages/data_collection"},
    {include = "preprocessing", from = "packages/preprocessing"},
    {include = "utils", from = "packages/utils"}
]